--- a/.github/workflows/jenkins-trigger.yml
+++ b/.github/workflows/jenkins-trigger.yml
@@ -3,18 +3,16 @@
 #
 # Reads pyproject.toml from the repo to determine:
 #   - Odoo version
-#   - Whether to run fast tests (fast_tests = true)
 #   - Whether to build Docker (build_docker = true)
 #   - Odoo edition (enterprise/community)
 #
 # Behavior:
-#   - fast_tests controls unit test execution (default: true)
-#   - build_docker controls Docker build on deploy branches (default: false)
-#   - If both are false, Jenkins is skipped entirely
+#   - Tests always run when workflow is triggered
+#   - Deploy (Docker build) only on push to deploy branches with build_docker=true
 #
 # Usage:
-#   - On PR: triggers unit tests only (if fast_tests=true)
-#   - On push to deploy branch: triggers tests and/or deploy based on flags
+#   - On PR: triggers unit tests
+#   - On push to deploy branch: triggers tests + deploy (if build_docker=true)
 
 name: Trigger Jenkins
 
@@ -42,18 +40,12 @@ on:
       triggered:
         description: 'Whether Jenkins was triggered'
         value: ${{ jobs.trigger.outputs.triggered }}
-      skipped:
-        description: 'Whether Jenkins was skipped (no tests, no deploy)'
-        value: ${{ jobs.trigger.outputs.skipped }}
       odoo-version:
         description: 'Odoo version from pyproject.toml'
         value: ${{ jobs.trigger.outputs.odoo-version }}
       build-docker:
         description: 'Whether Docker build is enabled'
         value: ${{ jobs.trigger.outputs.build-docker }}
-      fast-tests:
-        description: 'Whether fast tests are enabled'
-        value: ${{ jobs.trigger.outputs.fast-tests }}
 
 jobs:
   trigger:
@@ -61,10 +53,8 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       triggered: ${{ steps.trigger.outputs.triggered }}
-      skipped: ${{ steps.mode.outputs.skip }}
       odoo-version: ${{ steps.config.outputs.odoo-version }}
       build-docker: ${{ steps.config.outputs.build-docker }}
-      fast-tests: ${{ steps.config.outputs.fast-tests }}
 
     steps:
       - name: Checkout code
@@ -83,7 +73,6 @@ jobs:
             echo "::warning::pyproject.toml not found - using defaults"
             echo "odoo-version=17" >> $GITHUB_OUTPUT
             echo "build-docker=false" >> $GITHUB_OUTPUT
-            echo "fast-tests=true" >> $GITHUB_OUTPUT
             echo "odoo-edition=enterprise" >> $GITHUB_OUTPUT
             echo "git-hosts=" >> $GITHUB_OUTPUT
             exit 0
@@ -108,14 +97,6 @@ jobs:
           echo "build-docker=$BUILD_DOCKER" >> $GITHUB_OUTPUT
           echo "Build Docker: $BUILD_DOCKER"
 
-          # Extract fast_tests (true/false, default: true)
-          FAST_TESTS=$(grep -E "^fast_tests\s*=" pyproject.toml | head -1 | sed 's/.*=\s*//; s/[" ]//g')
-          if [ "$FAST_TESTS" != "false" ]; then
-            FAST_TESTS="true"
-          fi
-          echo "fast-tests=$FAST_TESTS" >> $GITHUB_OUTPUT
-          echo "Fast Tests: $FAST_TESTS"
-
           # Extract edition (enterprise/community)
           ODOO_EDITION=$(grep -E "^edition\s*=" pyproject.toml | head -1 | sed 's/.*=\s*//; s/[" ]//g')
           if [ -z "$ODOO_EDITION" ]; then
@@ -135,7 +116,6 @@ jobs:
         id: mode
         run: |
           # Get config values
-          FAST_TESTS="${{ steps.config.outputs.fast-tests }}"
           BUILD_DOCKER="${{ steps.config.outputs.build-docker }}"
           IS_PUSH="${{ github.event_name == 'push' }}"
           CURRENT_BRANCH="${{ github.ref_name }}"
@@ -156,78 +136,26 @@ jobs:
           echo "Current Branch: $CURRENT_BRANCH"
           echo "Deploy Branches: $DEPLOY_BRANCHES"
           echo "Is Deploy Branch: $IS_DEPLOY_BRANCH"
-          echo "Fast Tests: $FAST_TESTS"
           echo "Build Docker: $BUILD_DOCKER"
 
-          # Skip Jenkins entirely if nothing to do
-          if [ "$FAST_TESTS" == "false" ] && [ "$BUILD_DOCKER" == "false" ]; then
-            echo "skip=true" >> $GITHUB_OUTPUT
-            echo "deploy=false" >> $GITHUB_OUTPUT
-            echo "mode=Skipped (no tests, no deploy configured)" >> $GITHUB_OUTPUT
-            echo "::notice::Skipping Jenkins - both fast_tests and build_docker are false"
-            exit 0
-          fi
-
-          # PRs never deploy, only run tests (if enabled)
+          # PRs always run tests only (no deploy)
           if [ "$IS_PUSH" != "true" ]; then
-            if [ "$FAST_TESTS" == "true" ]; then
-              echo "skip=false" >> $GITHUB_OUTPUT
-              echo "deploy=false" >> $GITHUB_OUTPUT
-              echo "mode=Unit Tests Only" >> $GITHUB_OUTPUT
-            else
-              echo "skip=true" >> $GITHUB_OUTPUT
-              echo "deploy=false" >> $GITHUB_OUTPUT
-              echo "mode=Skipped (fast_tests=false for PR)" >> $GITHUB_OUTPUT
-            fi
-            exit 0
-          fi
-
-          # Push events - determine mode based on branch and flags
-          DEPLOY="false"
-          if [ "$IS_DEPLOY_BRANCH" == "true" ] && [ "$BUILD_DOCKER" == "true" ]; then
-            DEPLOY="true"
-          fi
-
-          # Determine final mode
-          if [ "$FAST_TESTS" == "true" ] && [ "$DEPLOY" == "true" ]; then
-            MODE="Unit Tests + Docker Build"
-          elif [ "$FAST_TESTS" == "true" ]; then
-            MODE="Unit Tests Only"
-          elif [ "$DEPLOY" == "true" ]; then
-            MODE="Docker Build Only"
-          else
-            # Non-deploy branch with fast_tests=false
-            echo "skip=true" >> $GITHUB_OUTPUT
             echo "deploy=false" >> $GITHUB_OUTPUT
-            echo "mode=Skipped (fast_tests=false, not a deploy branch)" >> $GITHUB_OUTPUT
+            echo "mode=Unit Tests" >> $GITHUB_OUTPUT
             exit 0
           fi
 
-          echo "skip=false" >> $GITHUB_OUTPUT
-          echo "deploy=$DEPLOY" >> $GITHUB_OUTPUT
-          echo "mode=$MODE" >> $GITHUB_OUTPUT
-          echo "Will deploy: $DEPLOY"
-          echo "Mode: $MODE"
-
-      - name: Skip Jenkins (nothing to do)
-        if: steps.mode.outputs.skip == 'true'
-        run: |
-          echo "## Jenkins Skipped" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Reason:** ${{ steps.mode.outputs.mode }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Configuration from pyproject.toml" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "| Setting | Value |" >> $GITHUB_STEP_SUMMARY
-          echo "|---------|-------|" >> $GITHUB_STEP_SUMMARY
-          echo "| Fast Tests | \`${{ steps.config.outputs.fast-tests }}\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Build Docker | \`${{ steps.config.outputs.build-docker }}\` |" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo ":information_source: No Jenkins job was triggered." >> $GITHUB_STEP_SUMMARY
+          # Push events - deploy only on deploy branches with build_docker=true
+          if [ "$IS_DEPLOY_BRANCH" == "true" ] && [ "$BUILD_DOCKER" == "true" ]; then
+            echo "deploy=true" >> $GITHUB_OUTPUT
+            echo "mode=Unit Tests + Docker Build" >> $GITHUB_OUTPUT
+          else
+            echo "deploy=false" >> $GITHUB_OUTPUT
+            echo "mode=Unit Tests" >> $GITHUB_OUTPUT
+          fi
 
       - name: Validate Jenkins configuration
         id: validate
-        if: steps.mode.outputs.skip != 'true'
         run: |
           if [ -z "${{ secrets.JENKINS_URL }}" ]; then
             echo "::warning::JENKINS_URL not configured - running in dry-run mode"
@@ -240,7 +168,7 @@ jobs:
           fi
 
       - name: Log Jenkins trigger (dry-run)
-        if: steps.mode.outputs.skip != 'true' && steps.validate.outputs.dry-run == 'true'
+        if: steps.validate.outputs.dry-run == 'true'
         run: |
           echo "## Jenkins Trigger (Dry Run)" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -251,7 +179,6 @@ jobs:
           echo "| Setting | Value |" >> $GITHUB_STEP_SUMMARY
           echo "|---------|-------|" >> $GITHUB_STEP_SUMMARY
           echo "| Odoo Version | \`${{ steps.config.outputs.odoo-version }}\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Fast Tests | \`${{ steps.config.outputs.fast-tests }}\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Build Docker | \`${{ steps.config.outputs.build-docker }}\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Edition | \`${{ steps.config.outputs.odoo-edition }}\` |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -271,14 +198,13 @@ jobs:
 
       - name: Trigger Jenkins
         id: trigger
-        if: steps.mode.outputs.skip != 'true' && steps.validate.outputs.dry-run == 'false'
+        if: steps.validate.outputs.dry-run == 'false'
         run: |
           echo "Triggering Jenkins: ${{ steps.mode.outputs.mode }}"
           echo "  Repository: ${{ github.repository }}"
           echo "  Branch: ${{ github.ref_name }}"
           echo "  Commit: ${{ github.sha }}"
           echo "  Deploy: ${{ steps.mode.outputs.deploy }}"
-          echo "  Fast Tests: ${{ steps.config.outputs.fast-tests }}"
 
           RESPONSE=$(curl -s -w "\n%{http_code}" \
             -X POST "${{ secrets.JENKINS_URL }}/generic-webhook-trigger/invoke" \
@@ -293,7 +219,6 @@ jobs:
               "git_hosts": "${{ steps.config.outputs.git-hosts }}",
               "deploy": ${{ steps.mode.outputs.deploy }},
               "build_docker": ${{ steps.config.outputs.build-docker }},
-              "fast_tests": ${{ steps.config.outputs.fast-tests }},
               "github_run_id": "${{ github.run_id }}",
               "github_run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
               "event": "${{ github.event_name }}",
@@ -320,7 +245,6 @@ jobs:
           echo "| Setting | Value |" >> $GITHUB_STEP_SUMMARY
           echo "|---------|-------|" >> $GITHUB_STEP_SUMMARY
           echo "| Odoo Version | \`${{ steps.config.outputs.odoo-version }}\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Fast Tests | \`${{ steps.config.outputs.fast-tests }}\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Build Docker | \`${{ steps.config.outputs.build-docker }}\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Edition | \`${{ steps.config.outputs.odoo-edition }}\` |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
