feat: add version pinning, pre-commit.ci, and unreleased deps check
- Add unreleased dependencies check to quality workflow (OCA pattern)
- Add pre-commit.ci configuration for automatic formatting fixes on PRs
- Update all templates to use @v1 instead of @main for stability
- Expand README with versioning policy and pre-commit.ci integration docs
- Add notes about concurrency being set by caller in reusable workflows

--- a/.github/workflows/jenkins-trigger.yml
+++ b/.github/workflows/jenkins-trigger.yml
@@ -13,11 +13,16 @@
 # Usage:
 #   - On PR: triggers unit tests
 #   - On push to deploy branch: triggers tests + deploy (if build_docker=true)
+#
+# Note: Concurrency should be set in the calling workflow, not here.
+# This allows the caller to define the concurrency group based on their context.
 
 name: Trigger Jenkins
 
 on:
   workflow_call:
+    # Note: Concurrency should be set in the calling workflow, not here
+    # This allows the caller to define the concurrency group based on their context
     inputs:
       deploy-branches:
         description: 'Branches that trigger deploy (comma-separated, e.g., "main,production")'
