--- a/templates/ci.yml
+++ b/templates/ci.yml
@@ -10,6 +10,8 @@
 #   PR: Quality Checks → Jenkins (Unit Tests)
 #   Push to deploy branch: Quality Checks → Jenkins (Tests + Deploy if build_docker=true)
 #   Push to non-deploy branch: Quality Checks → Jenkins (Tests only)
+#
+# Version pinning: Uses @v1 for stability. Check github-actions repo for latest version.
 
 name: CI/CD
 
@@ -33,7 +35,7 @@ jobs:
   # Stage 1: Quality Checks (GitHub Actions)
   # ============================================
   quality:
-    uses: YOUR_ORG/github-actions/.github/workflows/odoo-quality.yml@main
+    uses: YOUR_ORG/github-actions/.github/workflows/odoo-quality.yml@v1
     with:
       odoo-version: '17'      # Must match pyproject.toml [odoo] version
       python-version: '3.10'
@@ -52,7 +54,7 @@ jobs:
   # Tests always run. Deploy only on push to deploy-branches with build_docker=true.
   jenkins:
     needs: quality
-    uses: YOUR_ORG/github-actions/.github/workflows/jenkins-trigger.yml@main
+    uses: YOUR_ORG/github-actions/.github/workflows/jenkins-trigger.yml@v1
     with:
       deploy-branches: 'main,production'  # Branches that trigger Docker deploy (comma-separated)
       # dry-run: true                     # Uncomment for testing without triggering Jenkins
