--- a/workflow-templates/odoo-addon-ci.yml
+++ b/workflow-templates/odoo-addon-ci.yml
@@ -1,6 +1,8 @@
 # Odoo Addon CI Workflow Template
 # Copy this file to your repository at .github/workflows/ci.yml
 # Customize the odoo-version and python-version inputs for your project
+#
+# Version pinning: Uses @v1 for stability. Check github-actions repo for latest version.
 
 name: CI
 
@@ -57,7 +59,7 @@ jobs:
     needs: changes
     if: needs.changes.outputs.code == 'true'
     # CUSTOMIZE: Change the repository owner to match your sandbox/production org
-    uses: much-GmbH-sandbox/github-actions/.github/workflows/odoo-quality.yml@main
+    uses: much-GmbH-sandbox/github-actions/.github/workflows/odoo-quality.yml@v1
     with:
       # CUSTOMIZE: Set your Odoo version (14, 15, 16, 17, 18)
       odoo-version: '17'
@@ -79,8 +81,8 @@ jobs:
   #     (github.ref == 'refs/heads/main' ||
   #      github.ref == 'refs/heads/staging' ||
   #      startsWith(github.ref, 'refs/heads/staging-'))
-  #   uses: much-GmbH-sandbox/github-actions/.github/workflows/jenkins-trigger.yml@main
+  #   uses: much-GmbH-sandbox/github-actions/.github/workflows/jenkins-trigger.yml@v1
   #   with:
-  #     job-name: 'odoo-docker-build'
+  #     deploy-branches: 'main,staging'
   #     dry-run: true  # Set to false when Jenkins is configured
   #   secrets: inherit
