--- a/workflow-templates/odoo-addon-ci.yml
+++ b/workflow-templates/odoo-addon-ci.yml
@@ -3,6 +3,10 @@
 # Customize the odoo-version and python-version inputs for your project
 #
 # Version pinning: Uses @v1 for stability. Check github-actions repo for latest version.
+#
+# Flow:
+#   PR: Auto-Format → Quality Checks → (optional) Jenkins
+#   Push: Quality Checks → (optional) Jenkins
 
 name: CI
 
@@ -31,6 +35,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: write    # Required for auto-format to push commits
+  pull-requests: write
+
 jobs:
   # Optional: Detect if code actually changed
   changes:
@@ -53,11 +61,23 @@ jobs:
               - '**/requirements*.txt'
               - '**/__manifest__.py'
 
+  # Auto-format (PRs only) - automatically fixes formatting and pushes back
+  auto-format:
+    name: Auto-Format
+    if: github.event_name == 'pull_request'
+    # CUSTOMIZE: Change the repository owner to match your sandbox/production org
+    uses: much-GmbH-sandbox/github-actions/.github/workflows/auto-format.yml@v1
+    with:
+      python-version: '3.10'
+
   # Quality checks
   quality:
     name: Quality
-    needs: changes
-    if: needs.changes.outputs.code == 'true'
+    needs: [changes, auto-format]
+    if: |
+      always() &&
+      needs.changes.outputs.code == 'true' &&
+      (needs.auto-format.result == 'success' || needs.auto-format.result == 'skipped')
     # CUSTOMIZE: Change the repository owner to match your sandbox/production org
     uses: much-GmbH-sandbox/github-actions/.github/workflows/odoo-quality.yml@v1
     with:
