refactor: replace CI auto-format with local pre-commit
- Remove auto-format.yml workflow (GITHUB_TOKEN commits don't trigger new workflows)
- Add .github/docs/PRE_COMMIT.md with local setup instructions
- Update odoo-quality.yml to show helpful message when Black fails
- Simplify templates by removing auto-format job
- Remove pre-commit.ci config from templates

Developers should run `pre-commit install` locally for auto-formatting.

--- a/.github/workflows/odoo-quality.yml
+++ b/.github/workflows/odoo-quality.yml
@@ -156,7 +156,12 @@ jobs:
             echo "Black: All files properly formatted"
           else
             echo "result=fail" >> $GITHUB_OUTPUT
-            echo "::warning::Black formatting issues found"
+            echo "::warning::Black formatting issues found. Run 'black .' locally to fix."
+            echo ""
+            echo "To auto-fix formatting before commits, set up pre-commit hooks:"
+            echo "  pip install pre-commit && pre-commit install"
+            echo ""
+            echo "See: https://github.com/${{ github.repository_owner }}/github-actions/blob/main/.github/docs/PRE_COMMIT.md"
           fi
           echo "::endgroup::"
 
