--- a/templates/.pre-commit-config.yaml
+++ b/templates/.pre-commit-config.yaml
@@ -1,14 +1,7 @@
 # Pre-commit hooks for Odoo development
 # Install: pip install pre-commit && pre-commit install
 # Run manually: pre-commit run --all-files
-
-# pre-commit.ci configuration (https://pre-commit.ci)
-# Automatically fixes formatting issues on PRs
-ci:
-  autofix_commit_msg: "style: auto-format with pre-commit.ci [skip ci]"
-  autofix_prs: true
-  autoupdate_schedule: monthly
-  autoupdate_commit_msg: "chore: update pre-commit hooks"
+# Docs: https://github.com/YOUR_ORG/github-actions/blob/main/.github/docs/PRE_COMMIT.md
 
 repos:
   # Black - Code formatting
