--- a/workflow-templates/odoo-addon-ci.yml
+++ b/workflow-templates/odoo-addon-ci.yml
@@ -1,13 +1,10 @@
-# Odoo Addon CI Workflow Template
-# Copy this file to your repository at .github/workflows/ci.yml
-# Customize the odoo-version and python-version inputs for your project
+# Odoo Addon CI Workflow
 #
-# Version pinning: Uses @v1 for stability. Check github-actions repo for latest version.
-# Formatting: Run pre-commit locally (see .github/docs/PRE_COMMIT.md)
+# RECOMMENDED: Use base-repo as a template for new repositories:
+#   https://github.com/much-GmbH-sandbox/base-repo
 #
-# Flow:
-#   PR: Quality Checks → (optional) Jenkins
-#   Push: Quality Checks → (optional) Jenkins
+# base-repo includes this workflow plus all required config files:
+#   .flake8, .bandit, .pylintrc, pyproject.toml, .pre-commit-config.yaml
 
 name: CI
 
@@ -31,7 +28,6 @@ on:
       - 'LICENSE'
       - 'CHANGELOG.md'
 
-# Cancel in-progress runs for same PR/branch (saves GitHub Actions minutes)
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
@@ -41,7 +37,6 @@ permissions:
   pull-requests: write
 
 jobs:
-  # Optional: Detect if code actually changed
   changes:
     name: Detect Changes
     runs-on: ubuntu-latest
@@ -62,38 +57,12 @@ jobs:
               - '**/requirements*.txt'
               - '**/__manifest__.py'
 
-  # Quality checks (Black, Flake8, Pylint-Odoo, Radon, Bandit, SonarQube)
-  # If Black fails, run 'black .' locally or set up pre-commit hooks
-  # See: https://github.com/YOUR_ORG/github-actions/blob/main/.github/docs/PRE_COMMIT.md
   quality:
     name: Quality
     needs: [changes]
     if: needs.changes.outputs.code == 'true'
-    # CUSTOMIZE: Change the repository owner to match your sandbox/production org
     uses: much-GmbH-sandbox/github-actions/.github/workflows/odoo-quality.yml@v1
     with:
-      # CUSTOMIZE: Set your Odoo version (14, 15, 16, 17, 18)
-      odoo-version: '17'
-      # CUSTOMIZE: Set your Python version
+      odoo-version: '17'  # UPDATE: Set your Odoo version
       python-version: '3.10'
-      # Optional: Skip SonarQube for faster runs
-      # skip-sonar: true
-      # Optional: Fail on any quality issue
-      # strict-mode: true
     secrets: inherit
-
-  # Trigger Jenkins for Docker builds (only on protected branches)
-  # Uncomment when ready to integrate with Jenkins
-  # deploy:
-  #   name: Deploy
-  #   needs: quality
-  #   if: |
-  #     needs.quality.result == 'success' &&
-  #     (github.ref == 'refs/heads/main' ||
-  #      github.ref == 'refs/heads/staging' ||
-  #      startsWith(github.ref, 'refs/heads/staging-'))
-  #   uses: much-GmbH-sandbox/github-actions/.github/workflows/jenkins-trigger.yml@v1
-  #   with:
-  #     deploy-branches: 'main,staging'
-  #     dry-run: true  # Set to false when Jenkins is configured
-  #   secrets: inherit
